--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           dotnet-version: '9.x'
           
       - name: Pack
-        run: dotnet pack --configuration Release --output ${{ github.workspace }}/packages
+        run: dotnet pack Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --output ${{ github.workspace }}/packages
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
