--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,12 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '9.x'
-          
+
+      - name: Install .NET Android workloads
+        run: |
+          dotnet nuget locals all --clear
+          dotnet workload install maui-android
+
       - name: Pack
         run: dotnet pack Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --output ${{ github.workspace }}/packages
 
