--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           dotnet workload install maui-android
 
       - name: Pack
-        run: dotnet pack Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --output ${{ github.workspace }}/packages
+        run: dotnet pack Net.Android.Pdfium.csproj --configuration Release --output ${{ github.workspace }}/packages
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
