--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,18 @@ jobs:
           dotnet nuget locals all --clear
           dotnet workload install maui-android
 
-      - name: Pack
-        run: dotnet pack ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --output ${{ github.workspace }}/packages
+      - name: Restore dependencies
+        run: dotnet restore
 
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+
+      - name: List build output
+        run: ls -R /Users/runner/work/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium/bin/Release/
+
+      - name: Pack
+        run: dotnet pack /Users/runner/work/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release
+        
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
