--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,16 +27,16 @@ jobs:
           dotnet workload install maui-android
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj
 
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --no-restore
 
       - name: List build output
-        run: ls -R /Users/runner/work/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium/bin/Release/
+        run: ls -R ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium/bin/Release/
 
       - name: Pack
-        run: dotnet pack /Users/runner/work/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release
+        run: dotnet pack ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release
         
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
