--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,11 @@ jobs:
           dotnet nuget locals all --clear
           dotnet workload install maui-android
 
-      - name: Restore dependencies
+      - name: Restore
         run: dotnet restore ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj
 
       - name: Build
         run: dotnet build ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release --no-restore
-
-      - name: List build output
-        run: ls -R ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium/bin/Release/
 
       - name: Pack
         run: dotnet pack ${{ github.workspace }}/Net.Android.Pdfium/Net.Android.Pdfium.csproj --configuration Release
